--- a/asciidoctor-icd-builder/pom.xml
+++ b/asciidoctor-icd-builder/pom.xml
@@ -16,6 +16,17 @@
                 <groupId>org.asciidoctor</groupId>
                 <artifactId>asciidoctor-maven-plugin</artifactId>
                 <version>2.2.1</version>
+                
+                <!-- Twitter extension for AsciidoctorJ -->
+                <dependencies>
+                    <dependency>
+                        <groupId>org.asciidoctor.maven</groupId>
+                        <artifactId>asciidoctorj-twitter-extension</artifactId>
+                        <version>1.0.0-SNAPSHOT</version>
+                    </dependency>
+                </dependencies>
+                                
+                
                 <executions>
                     <execution>
                         <id>convert-to-html</id>
@@ -39,11 +50,5 @@
             </plugin>
         </plugins>
     </build>
-    <dependencies>
-        <dependency>
-            <groupId>org.asciidoctor.maven</groupId>
-            <artifactId>asciidoctorj-twitter-extension</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
-        </dependency>
-    </dependencies>
+    
 </project>
