--- a/asciidoctor-icd-builder/pom.xml
+++ b/asciidoctor-icd-builder/pom.xml
@@ -6,6 +6,7 @@
     <artifactId>asciidoctor-icd-builder</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
+    <name>Asciidoctor-icd-builder</name>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
