--- a/.github/workflows/dockerhub-push.yml
+++ b/.github/workflows/dockerhub-push.yml
@@ -17,6 +17,6 @@ jobs:
       env:
         DOCKER_USER: ${{secrets.DOCKERHUB_USERNAME}}
         DOCKER_PASSWORD: ${{secrets.DOCKERHUB_PASSWORD}}        
-      run: docker build . --file Dockerfile --tag hectorcadavid/asciidoctor-icd-extensions:$(date +%s)
+      run: docker build . --file Dockerfile --tag hectorcadavid/asciidoctor-icd-extensions:latest
     - name: Docker push
-      run: docker push hectorcadavid/asciidoctor-icd-extensions:$(date +%s)
+      run: docker push hectorcadavid/asciidoctor-icd-extensions:latest
