--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
     <modules>
         <module>asciidoctorj-twitter-extension</module>
         <module>asciidoctor-icd-builder</module>
+        <module>Dummy-extension</module>
     </modules>
 
     <build>
