logging handler added

--- a/asciidoctor-icd-builder/pom.xml
+++ b/asciidoctor-icd-builder/pom.xml
@@ -21,6 +21,13 @@
                 
                 <dependencies>
                     
+                    <!--logging for extensions -->
+                    <dependency>                        
+                        <groupId>rug.icdtools</groupId>
+                        <artifactId>asciidoctorj-extensions-logger</artifactId>
+                        <version>1.0-SNAPSHOT</version>
+                    </dependency>
+                    
                     <!-- Twitter extension for AsciidoctorJ -->
                     
                     <dependency>
