--- a/asciidoctor-icd-builder/pom.xml
+++ b/asciidoctor-icd-builder/pom.xml
@@ -42,10 +42,32 @@
                         <artifactId>Dummy-extension</artifactId>
                         <version>1.0-SNAPSHOT</version>
                     </dependency>
-                
+
+                    <!--plantuml, ditaa, etc-->
+                    <dependency>
+                        <groupId>org.asciidoctor</groupId>
+                        <artifactId>asciidoctorj-diagram</artifactId>
+                        <version>2.2.1</version>
+                    </dependency>
+                                                
                 </dependencies>
-                                
-                
+                             
+                                   
+                <configuration>
+                    <!--<sourceDirectory>src/docs/asciidoc</sourceDirectory>-->
+                    <requires>
+                        <require>asciidoctor-diagram</require>
+                    </requires>
+                    <attributes>
+                        <!-- Example below shows how to specify in this pom instead of System's PATH, the location of dot command of Graphviz, required by PlantUML libraries -->
+                        <!-- Windows:
+                            <graphvizdot>C:\Program Files (x86)\Graphviz2.38\bin\dot.exe</graphvizdot>
+                        -->
+                        <!-- *nix :
+                            <graphvizdot>/usr/local/bin/dot</graphvizdot>
+                        -->
+                    </attributes>
+                </configuration>                
 
                                                 
                 <executions>
@@ -62,10 +84,12 @@
                             <outputDirectory>${OUTPUT_PATH}</outputDirectory>
                             <backend>html5</backend>
                             <attributes> 
-                                <source-highlighter>coderay</source-highlighter>
                                 <imagesdir>./images</imagesdir>
                                 <toc>left</toc>
                                 <icons>font</icons>
+                                <sectanchors>true</sectanchors>
+                                <idprefix/>
+                                <idseparator>-</idseparator>
                             </attributes>
                         </configuration>
                     </execution>
