--- a/.github/workflows/dockerhub-push.yml
+++ b/.github/workflows/dockerhub-push.yml
@@ -19,7 +19,7 @@ jobs:
         DOCKER_PASSWORD: ${{secrets.DOCKERHUB_PASSWORD}}     
       run: docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
     - name: update sysrdl2jinja submodule
-      run: git submodule update --init
+      run: git submodule update --remote
     - name: Build the Docker image        
       run: docker build . --file Dockerfile --tag hectorcadavid/asciidoctor-icd-ext:latest
     - name: Docker push
