--- a/.github/workflows/dockerhub-push.yml
+++ b/.github/workflows/dockerhub-push.yml
@@ -13,11 +13,9 @@ jobs:
     runs-on: ubuntu-latest    
     steps:
     - name: Checkout repository
-      uses: actions/checkout@v2
-    - name: Checkout submodules
-      uses: textbook/git-checkout-submodule-action@master
+      uses: actions/checkout@v2       
       with:
-        remote: true
+        submodules: recursive
     - name: Docker login
       env:
         DOCKER_USER: ${{secrets.DOCKERHUB_USERNAME}}
