--- a/asciidoctorj-extensions-logger/pom.xml
+++ b/asciidoctorj-extensions-logger/pom.xml
@@ -19,6 +19,13 @@
             <artifactId>asciidoctorj</artifactId>
             <version>${asciidoctorj.version}</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/com.google.inject/guice -->
+        <dependency>
+            <groupId>com.google.inject</groupId>
+            <artifactId>guice</artifactId>
+            <version>5.0.1</version>
+        </dependency>
+
         
 
         
