--- a/asciidoctor-icd-builder/pom.xml
+++ b/asciidoctor-icd-builder/pom.xml
@@ -57,6 +57,13 @@
                         <artifactId>Dummy-extension</artifactId>
                         <version>1.0-SNAPSHOT</version>
                     </dependency>
+                    
+                    <dependency>
+                        <groupId>rug.icdtools</groupId>
+                        <artifactId>systemrdl-asciidoctor-extensions</artifactId>
+                        <version>1.0-SNAPSHOT</version>
+                    </dependency>
+
 
                     <!--plantuml, ditaa, etc-->
                     <dependency>
