--- a/asciidoctor-icd-builder/pom.xml
+++ b/asciidoctor-icd-builder/pom.xml
@@ -6,7 +6,7 @@
     <artifactId>asciidoctor-icd-builder</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
-    <name>Asciidoctor-icd-builder</name>
+    <name>asciidoctor-icd-builder</name>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <!--<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -39,7 +39,7 @@
                     <!--logging for extensions -->
                     <dependency>                        
                         <groupId>rug.icdtools</groupId>
-                        <artifactId>asciidoctorj-extensions-logger</artifactId>
+                        <artifactId>asciidoctorj-extension-tools</artifactId>
                         <version>1.0-SNAPSHOT</version>
                     </dependency>
                     
