--- a/systemrdl-asciidoctor-extensions/pom.xml
+++ b/systemrdl-asciidoctor-extensions/pom.xml
@@ -26,5 +26,16 @@
             <artifactId>asciidoctorj-extension-tools</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.11</version>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.6</version>
+        </dependency>
     </dependencies>
 </project>
