log levels, line num errors added

--- a/asciidoctor-icd-builder/pom.xml
+++ b/asciidoctor-icd-builder/pom.xml
@@ -106,6 +106,7 @@
                             <outputDirectory>${OUTPUT_PATH}</outputDirectory>
                             <!--<backend>pdf</backend>-->
                             <backend>html</backend>
+                            <sourcemap>true</sourcemap>
                             <attributes> 
                                 <imagesdir>./images</imagesdir>
                                 <toc>left</toc>
