--- a/asciidoctorj-extension-tools/pom.xml
+++ b/asciidoctorj-extension-tools/pom.xml
@@ -25,9 +25,25 @@
             <artifactId>guice</artifactId>
             <version>5.0.1</version>
         </dependency>
-
         
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.13.1</version>
+        </dependency>
 
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.11</version>
+            <scope>runtime</scope>
+        </dependency>
+        
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.6</version>
+        </dependency>
         
     </dependencies>
     <build>
