--- a/systemrdl-asciidoctor-extensions/pom.xml
+++ b/systemrdl-asciidoctor-extensions/pom.xml
@@ -47,5 +47,10 @@
             <artifactId>jsoup</artifactId>
             <version>1.14.3</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.5.13</version>
+        </dependency>
     </dependencies>
 </project>
