--- a/asciidoctorj-extension-tools/pom.xml
+++ b/asciidoctorj-extension-tools/pom.xml
@@ -44,7 +44,13 @@
             <artifactId>commons-io</artifactId>
             <version>2.6</version>
         </dependency>
-        
+
+        <dependency>
+            <groupId>commons-lang</groupId>
+            <artifactId>commons-lang</artifactId>
+            <version>2.6</version>
+        </dependency>        
+                        
         <dependency>
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>httpclient</artifactId>
@@ -72,7 +78,11 @@
             <artifactId>gson</artifactId>
             <version>2.8.9</version>
         </dependency>
-        
+        <dependency>
+            <groupId>org.jsoup</groupId>
+            <artifactId>jsoup</artifactId>
+            <version>1.14.3</version>
+        </dependency>        
         
     </dependencies>
     <build>
