--- a/asciidoctorj-extension-tools/pom.xml
+++ b/asciidoctorj-extension-tools/pom.xml
@@ -82,7 +82,12 @@
             <groupId>org.jsoup</groupId>
             <artifactId>jsoup</artifactId>
             <version>1.14.3</version>
-        </dependency>        
+        </dependency> 
+        <dependency>
+            <groupId>com.googlecode.json-simple</groupId>
+            <artifactId>json-simple</artifactId>
+            <version>1.1.1</version>
+        </dependency>       
         
     </dependencies>
     <build>
