acronyms rule included

--- a/linter-styles/Demo/Units.yml
+++ b/linter-styles/Demo/Units.yml
@@ -6,8 +6,10 @@ raw:
   - '[a-zA-Z]+\s'
 tokens:
   - '(?:centi|milli)?meters'
+  - '(?:centi|milli)?metres'
   - '(?:kilo)?grams'
   - '(?:kilo)?meters'
+  - '(?:kilo)?metres'
   - '(?:mega)?pixels'
   - cm
   - inches
