--- a/.github/workflows/dockerhub-push.yml
+++ b/.github/workflows/dockerhub-push.yml
@@ -23,6 +23,6 @@ jobs:
     - name: update sysrdl2jinja submodule
       run: git submodule update --remote
     - name: Build the Docker image        
-      run: docker build . --file Dockerfile --tag hectorcadavid/asciidoctor-icd-ext:latest
+      run: docker build . --file Dockerfile --tag hectorcadavid/asciidoctor-icd-experimental:v0.2
     - name: Docker push
-      run: docker push hectorcadavid/asciidoctor-icd-ext:latest
+      run: docker push hectorcadavid/asciidoctor-icd-experimental:v0.2
